fixing distortion and adding links and fixing imgs

--- a/src/App.css
+++ b/src/App.css
@@ -97,10 +97,12 @@ input[type="submit"]:hover {
 
 .video-container iframe,
 .video-container object,
-.video-container video { 
+.video-container video,
+.video-container img { 
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
 }
+
